--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is project served as example for an guest article that was published on webguys.de . It's a very basic example which shows how to make use of the Magento REST API in iOS projects.
+This project served as an example for the guest article that was published on webguys.de in the 2012 edition of their famous advent calender . It's a very basic example which shows how to make use of the Magento REST API in iOS projects.
 
 References:
 - link to the article (german)
